--- a/phase 2 - practice project- 1/src/main/webapp/Welcome.html
+++ b/phase 2 - practice project- 1/src/main/webapp/Welcome.html
@@ -11,9 +11,9 @@
 		<h2>
 			Hello there! 
         </h2>
-		<h3>You've successfully logged in!!..</h3>
+		<h3>HOME PAGE</h3>
 
-		<br> <input type="submit" value="Logout" />
+		<h4><a href="Login.html">Logout</a></h4>
 	</form>
 	
 </body>
