--- a/phase 2 - practice project- 1/src/main/webapp/Login.html
+++ b/phase 2 - practice project- 1/src/main/webapp/Login.html
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Login Page</title>
-</head>
-<body>
+	<head>
+		<meta charset="ISO-8859-1">
+		<title>Login</title>
+	</head>
+	<body>
+		<h2>SIGN IN</h2>
+		<form action="loginServelt">
+			User Id: <input type="text" name="id"/><br/>
+			<h3> </h3>
+			Password: <input type="password" name="password"/><br/>
+			<input type="submit" value="Login"/>
+			<input type="reset" value="cancel"/>
+		</form>
 
-	<form action="login" method="post">
-
-		<h3>Enter Login details</h3>
-
-		<table>
-			<tr>
-				<td>User Name:</td>
-				<td><input type="text" name="usName" /></td>
-			</tr>
-			<tr>
-				<td>User Password:</td>
-				<td><input type="password" name="usPass" /></td>
-			</tr>
-
-		</table>
-		
-		<input type="submit" value="Login" />
-
-	</form>
-</body>
+	</body>
 </html>
