--- a/phase 2 - assisted practice project-1/src/main/webapp/getANDpost.html
+++ b/phase 2 - assisted practice project-1/src/main/webapp/getANDpost.html
@@ -6,12 +6,12 @@
 	</head>
 	<body>
 
-		<a href="http://localhost:8080/phase_2_-_assisted_practice_project-2/numbers.html">Add 2 number</a><br><br>
-		<form name=frm method=post action="posthandler">
-  			Name <input name="name" id="name" maxlenght=50><br>
-  			Address <input name="address" id="address" maxlength=100><br>
-  			<button>Submit</button>
-		</form>
+	<a href="gethandler?name=John+Doe&address=145+Lake+Avenue">Do a Servlet GET</a><br><br>
+	<form name=frm method=post action="posthandler">
+  		Name <input name="name" id="name" maxlenght=50><br>
+  		Address <input name="address" id="address" maxlength=100><br>
+  	<button>Submit</button>
+	</form>
 
-</body>
+	</body>
 </html>
